# ScurriCodingPuzzle

./: .gitignore  README.md  multiples.py  proud_career_moment.docx  proud_career_moment.txt  pyproject.toml
postcode_validator/: README.md  example.py  pyproject.toml  setup.py
postcode_validator/postcode_validator/: postcode_validator.py
postcode_validator/src/postcode_validator/: __init__.py
postcode_validator/tests.py/: test_postcode_validator.py
src/scurricodingpuzzle/: __init__.py
