[project]
name = "scurricodingpuzzle"
version = "0.1.0"
description = "Just an env for this coding puzzle"
authors = [
    { name = "Ben", email = "benthedev@outlook.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
