[project]
name = "postcode-validator"
version = "0.1.0"
description = "A library to validate United Kingdom postcodes"
authors = [
    { name = "Ben", email = "benthedev@outlook.com" }
]
dependencies = [
    "postcode_validator>=0.0.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []
dev-dependencies = [
    "setuptools>=68.2.2",
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true
